Added user activity api
